unpackaged/main/default/objects/conference360__Webinar_Account__c/conference360__Webinar_Account__c.object-meta.xml
<CustomObject>
    <label>Webinar Account</label>
    <nameField>
        <label>Webinar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webinar Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>