unpackaged/main/default/objects/conference360__Webinar_Account__c/fields/conference360__Access_Token__c.field-meta.xml
<CustomField>
    <fullName>conference360__Access_Token__c</fullName>
    <label>Refresh Token</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>