unpackaged/main/default/objects/conference360__Webinar_Account__c/fields/conference360__Default__c.field-meta.xml
<CustomField>
    <fullName>conference360__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Defines this Account as the Default.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>