unpackaged/main/default/objects/conference360__Webinar_Account__c/fields/conference360__Provider__c.field-meta.xml
<CustomField>
    <fullName>conference360__Provider__c</fullName>
    <label>Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GoToWebinar</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>Webex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>