unpackaged/main/default/objects/conference360__Webinar_Account__c/fields/conference360__Token_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>conference360__Token_Valid_Till__c</fullName>
    <description>Access Token validity.</description>
    <inlineHelpText>This is the time after which the token expires. Set automatcially</inlineHelpText>
    <label>Token Valid Till</label>
    <type>DateTime</type>
</CustomField>